@@ -118,6 +118,9 @@ UNRELEASED CHANGES
     * Keep a cached copy of the basis inventory to speed up operations 
       that need to refer to it.  (Johan Rydberg, Martin Pool)
 
+    * Fix bugs in bzr status display of non-ascii characters.  (Martin 
+      Pool)
+
   TESTING:
 
     * Fix selftest asking for passwords when there are no SFTP keys.  
